# Ray-Tracer

./: .gitignore  CMakeLists.txt
include/: Camera.h  Image.h  Intersection.h  Model.h  RTCube.h  RTGeometry.h  RTObj.h  RTScene.h  Ray.h  RayTracer.h  Screenshot.h  Shader.h  Triangle.h
lib/: glew32.lib
shaders/: lighting.frag
src/: Camera.cpp  Image.cpp  RTObj.cpp  RTScene.cpp  RTScene.inl  RayTracer.cpp  Scene.cpp  Scene.inl  Shader.cpp  main.cpp
